fix-style: x-scroll, word wrap in todoItem

--- a/src/components/Layout/app.css
+++ b/src/components/Layout/app.css
@@ -3,24 +3,25 @@
     top: 0;
     right: 0;
     width: 100vw;
-    height: 100vh;
-    overflow: hidden;
+    height: 100%;
+    overflow-x: hidden;
 }
 
 .App {
     display: flex;
     justify-content: center;
-    overflow: hidden;
+    overflow-x: hidden;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
 }
 
 .app-with-drawer {
+    overflow-x: hidden;
     margin-top: 65px;
     display: flex;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 }
 
 @media screen and (max-width: 768px) {
