--- a/src/components/SideBar/side-bar.css
+++ b/src/components/SideBar/side-bar.css
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     gap: 8px;
-    height: 100%;
+    height: 100vh;
     width: 300px;
     background: #FAFAFA;
     z-index: 1000;
@@ -15,8 +15,6 @@
     transition: transform 0.2s, opacity 0.4s, width 0.4s;
     transform: translateX(0%);
     opacity: 1;
-    /*display: block;*/
-
 }
 
 .close {
